# omniblock

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/multisend/: Cargo.toml  README.md  weights.rs
pallets/multisend/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
